--- a/index.html
+++ b/index.html
@@ -18,7 +18,35 @@
         const audio = document.getElementById("backsound");
         audio.play();
 
-        alert("⚠️ Peringatan!\nSelamat datang di website kami.");
+        alert("Teruntuk kamu...")
+        alert("Sayangkuuu....")
+        alert("Aku ingin minta maaf")
+        alert("Kejadian kemarin..")
+        alert("Sama kemarin lusa")
+        alert("Banyak kejadian-kejadian")
+        alert("Yang gak aku pingin juga")
+        alert("Aku tauu sekarang kamu masi nangiss")
+        alert("Kamu masi marah sama aku")
+        alert("Yang???")
+        alert("Pada akhirnyaa..")
+        alert("Kita saling marahan")
+        alert("Kamu di keadaan kecewa")
+        alert("Aku di keadaan cape")
+        alert("Ya pada akhirnya kita ributt")
+        alert("Sekarang posisi kamu nelpon aku ini")
+        alert("Posisi aku ngedit ini biar kamu senyum dikit")
+        alert("🤗")
+        alert("Aku gatau pingin ngucapin apalagi ke kamu")
+        alert("Tapi yang penting aku pengen...")
+        alert("Minta maaf ke kamuu...")
+        alert("Dengerin lagunya ya sayangg, buar kamu happy lagiii....")
+      
+
+
+
+
+
+;
     };
 </script>
 
