--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Alert dengan Backsound</title>
+    <title>SAYANGGG</title>
 </head>
 <body>
 
