--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <!-- Audio Backsound -->
 <audio id="backsound" autoplay loop>
-    <source src="lv_0_20260217004147.mp3" type="audio/mpeg">
+    <source src="lv_0_20260217004147.mp3" type="mp3">
     Browser Anda tidak mendukung audio.
 </audio>
 
