--- a/index.html
+++ b/index.html
@@ -2,52 +2,44 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>SAYANGGG</title>
+    <title>Alert dengan Backsound</title>
 </head>
 <body>
 
-<!-- Audio Backsound -->
-<audio id="backsound" autoplay loop>
-    <source src="lv_0_20260217004147.mp3" type="audio/mpeg">
-    Browser Anda tidak mendukung audio.
+<button onclick="mulai()">Klik dulu ya sayang 🤍</button>
+
+<audio id="backsound" loop>
+    <source src="backsound.mp3" type="audio/mpeg">
 </audio>
 
 <script>
-    // Play audio (untuk menghindari autoplay block)
-    window.onload = function() {
-        const audio = document.getElementById("backsound");
-        audio.play();
+function mulai() {
+    const audio = document.getElementById("backsound");
+    audio.play();
 
-        alert("Teruntuk kamu...")
-        alert("Sayangkuuu....")
-        alert("Aku ingin minta maaf")
-        alert("Kejadian kemarin..")
-        alert("Sama kemarin lusa")
-        alert("Banyak kejadian-kejadian")
-        alert("Yang gak aku pingin juga")
-        alert("Aku tauu sekarang kamu masi nangiss")
-        alert("Kamu masi marah sama aku")
-        alert("Yang???")
-        alert("Pada akhirnyaa..")
-        alert("Kita saling marahan")
-        alert("Kamu di keadaan kecewa")
-        alert("Aku di keadaan cape")
-        alert("Ya pada akhirnya kita ributt")
-        alert("Sekarang posisi kamu nelpon aku ini")
-        alert("Posisi aku ngedit ini biar kamu senyum dikit")
-        alert("🤗")
-        alert("Aku gatau pingin ngucapin apalagi ke kamu")
-        alert("Tapi yang penting aku pengen...")
-        alert("Minta maaf ke kamuu...")
-        alert("Dengerin lagunya ya sayangg, buar kamu happy lagiii....")
-      
-
-
-
-
-
-;
-    };
+    alert("Teruntuk kamu...")
+    alert("Sayangkuuu....")
+    alert("Aku ingin minta maaf")
+    alert("Kejadian kemarin..")
+    alert("Sama kemarin lusa")
+    alert("Banyak kejadian-kejadian")
+    alert("Yang gak aku pingin juga")
+    alert("Aku tauu sekarang kamu masi nangiss")
+    alert("Kamu masi marah sama aku")
+    alert("Yang???")
+    alert("Pada akhirnyaa..")
+    alert("Kita saling marahan")
+    alert("Kamu di keadaan kecewa")
+    alert("Aku di keadaan cape")
+    alert("Ya pada akhirnya kita ributt")
+    alert("Sekarang posisi kamu nelpon aku ini")
+    alert("Posisi aku ngedit ini biar kamu senyum dikit")
+    alert("🤗")
+    alert("Aku gatau pingin ngucapin apalagi ke kamu")
+    alert("Tapi yang penting aku pengen...")
+    alert("Minta maaf ke kamuu...")
+    alert("Dengerin lagunya ya sayangg, biar kamu happy lagiii....")
+}
 </script>
 
 </body>
